# isaac-sim-nav2

./: README.md  WORKFLOW.txt  docker-compose.pypi.yml  docker-compose.yml  package.xml
config/: nav2_params.yaml  rviz2_nav2.rviz
docker/: Dockerfile.isaacpypi  Dockerfile.ros2  entrypoint.sh
isaac_sim/: robot_config.py  setup_scene.py
launch/: full_system.launch.py  nav2_bringup.launch.py
maps/: generate_map.py  simple_map.pgm  simple_map.yaml
scripts/: run_isaac_sim.sh  send_goal.py
urdf/: turtlebot_like.urdf
